<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_password"
        android:icon="@drawable/ic_password_m"
        android:title="@string/menu_password"/>
    <item
        android:id="@+id/menu_backup"
        android:icon="@drawable/ic_backup_m"
        android:title="@string/menu_backup"/>
    <item
        android:id="@+id/menu_restore"
        android:icon="@drawable/ic_restore_m"
        android:title="@string/menu_restore"/>
	<item
        android:id="@+id/menu_warn"
        android:icon="@drawable/ic_warn_m"
        android:title="@string/menu_warn"/>
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_exit_m"
        android:title="@string/menu_exit"/>
    <item
        android:id="@+id/menu_theme1"
        android:icon="@drawable/ic_theme1_m"
        android:title="@string/menu_theme1"/>
    <item
        android:id="@+id/menu_theme2"
        android:icon="@drawable/ic_theme2_m"
        android:title="@string/menu_theme2"/>
    <item
        android:id="@+id/menu_update"
        android:icon="@drawable/ic_update_m"
        android:title="@string/menu_update"/>
   <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about_m"
        android:title="@string/menu_about"/>

</menu>