<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout style="@style/TitleLayout" >

        <TextView
            style="@style/TitleTextSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:text="@string/title_activity_edit" />

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:background="@color/whitetrans"
            android:contentDescription="@string/img_desc_back"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_back_s" />
        
        <ImageButton
            android:id="@+id/calcbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@+id/backbtn"
            android:background="@color/whitetrans"
            android:contentDescription="@string/img_desc_add"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_calc_s" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="10dp" >

        <LinearLayout
            android:id="@+id/editlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/txt_view_category" />

            <Spinner
                android:id="@+id/categoryspinner"
                style="@style/AddLayout" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/txt_view_itemname" />

            <AutoCompleteTextView
                android:id="@+id/itemnameedit"
                style="@style/AddLayout"
                android:completionThreshold="1"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete"
                android:maxLength="15"
                android:textColor="@android:color/black">
                <requestFocus />
            </AutoCompleteTextView>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/txt_view_itemprice" />

            <EditText
                android:id="@+id/itempriceedit"
                style="@style/AddLayout"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLength="8" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:text="@string/txt_view_itembuydate" />

            <RelativeLayout style="@style/AddLayout" >

                <EditText
                    android:id="@+id/itembuydateedit"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:inputType="date" >

                </EditText>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="3dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/img_desc_selectday"
                    android:src="@drawable/ic_date" />
            </RelativeLayout>

            <Button
                android:id="@+id/submitbtn"
                style="@style/ButtonTextSize"
                android:text="@string/btn_edit" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>