<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ListLayout"
    android:background="@color/tablebg" >

    <TextView
        android:id="@+id/idtext"
        android:layout_width="36dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/txt_rank" />

    <TextView
        android:id="@+id/itemnametext"
        android:layout_width="122dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/txt_itemname" />

    <TextView
        android:id="@+id/itembuydatetext"
        android:layout_width="80dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/txt_itembuydate" />

    <TextView
        android:id="@+id/itempricetext"
        android:layout_width="77dp"
        android:layout_height="fill_parent"
        android:layout_margin="1dp"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:gravity="right|center"
        android:paddingRight="5dp"
        android:text="@string/txt_itemprice" />

</LinearLayout>