<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/title"
        style="@style/TitleLayout" >

        <TextView
            android:id="@+id/titletext"
            style="@style/TitleTextSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:text="@string/title_activity_rank" />

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:background="@color/whitetrans"
            android:contentDescription="@string/img_desc_back"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_back_s" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/listtitle"
        style="@style/ListLayout"
        android:layout_below="@+id/title"
        android:background="@color/tablebg"
        android:orientation="horizontal" >

        <TextView
            style="@style/ListTitleTextSize"
            android:layout_width="36dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/txt_rank"
            android:textColor="@color/daytitle" />

        <TextView
            style="@style/ListTitleTextSize"
            android:layout_width="122dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/txt_itemname"
            android:textColor="@color/daytitle" />

        <TextView
            style="@style/ListTitleTextSize"
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center"
            android:text="@string/txt_itembuydate"
            android:textColor="@color/daytitle" />

        <TextView
            style="@style/ListTitleTextSize"
            android:layout_width="77dp"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:gravity="center|right"
            android:paddingRight="5dp"
            android:text="@string/txt_itemprice"
            android:textColor="@color/daytitle" />
    </LinearLayout>

    <ListView
        android:id="@+id/itemlistview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/totalpricetext"
        android:layout_below="@+id/listtitle"
        android:divider="@android:color/transparent" >

    </ListView>

    <TextView
        android:id="@+id/totalpricetext"
        style="@style/TotalLayout"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/txt_monthprice"
        android:textColor="@color/total" />

</RelativeLayout>