<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/title"
        style="@style/TitleLayout" >

        <TextView
            style="@style/TitleTextSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:text="@string/title_activity_month" />

        <ImageButton
            android:id="@+id/backbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:background="@color/whitetrans"
            android:contentDescription="@string/img_desc_back"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_back_s" />
        
        <ImageButton
            android:id="@+id/calcbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@+id/backbtn"
            android:background="@color/whitetrans"
            android:contentDescription="@string/img_desc_add"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_calc_s" />
    </RelativeLayout>

    <TextView
        android:id="@+id/nodatatext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/txt_nodata"
        android:visibility="gone" />

    <ExpandableListView
        android:id="@+id/explistview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/monthtotalpricetext"
        android:layout_below="@+id/title"
        android:childDivider="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:groupIndicator="@android:color/transparent" >

    </ExpandableListView>

    <TextView
        android:id="@+id/monthtotalpricetext"
        style="@style/TotalLayout"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/txt_monthprice"
        android:textColor="@color/total" />

</RelativeLayout>