<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/ListLayout"
        android:background="@color/tablebg"
        android:orientation="horizontal" >

        <TextView
            style="@style/ListTitleTextSize"
            android:layout_width="36dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/monthtitlebg"
            android:gravity="center"
            android:text="@string/txt_rank"
            android:textColor="@color/daytitle" />

        <TextView
            style="@style/ListTitleTextSize"
            android:layout_width="122dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/monthtitlebg"
            android:gravity="center"
            android:text="@string/txt_itemname"
            android:textColor="@color/daytitle" />

        <TextView
            style="@style/ListTitleTextSize"
            android:layout_width="121dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/monthtitlebg"
            android:gravity="right|center"
            android:paddingRight="5dp"
            android:text="@string/txt_monthprice"
            android:textColor="@color/daytitle" />

        <TextView
            style="@style/ListTitleTextSize"
            android:layout_width="36dp"
            android:layout_height="fill_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/monthtitlebg"
            android:gravity="center"
            android:text="@string/txt_count"
            android:textColor="@color/daytitle" />
    </LinearLayout>

    <TextView
        android:id="@+id/itemnodatatext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/txt_nodata"
        android:visibility="gone" />

    <ListView
        android:id="@+id/itemlistview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="@android:color/transparent" >

    </ListView>

</LinearLayout>