<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ListLayout"
    android:background="@color/tablebg" >

    <TextView
        android:id="@+id/idtext"
        android:layout_width="30dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_weight="1"
        android:background="@color/monthsubbg"
        android:gravity="center"
        android:text="@string/txt_monthsubdot" />

    <TextView
        android:id="@+id/monthtext"
        android:layout_width="128dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_weight="1"
        android:background="@color/monthsubbg"
        android:gravity="center"
        android:text="@string/txt_itembuydate" />

    <TextView
        android:id="@+id/monthpricetext"
        android:layout_width="158dp"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_weight="1"
        android:background="@color/monthsubbg"
        android:gravity="right|center"
        android:paddingRight="10dp"
        android:text="@string/txt_monthprice" />

</LinearLayout>