<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        style="@style/TitleLayout" >

        <TextView
            style="@style/TitleTextSize"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:text="@string/title_activity_day" />

        <ImageButton
            android:id="@+id/addbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:background="@color/whitetrans"
            android:contentDescription="@string/img_desc_add"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_add_s" />

        <ImageButton
            android:id="@+id/calcbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:layout_toLeftOf="@id/addbtn"
            android:background="@color/whitetrans"
            android:contentDescription="@string/img_desc_calc"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:src="@drawable/ic_calc_s" />

    </RelativeLayout>

    <TextView
        android:id="@+id/nodatatext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/txt_nodata"
        android:visibility="gone" />

    <ListView
        android:id="@+id/itemlistview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:divider="@android:color/transparent" >

    </ListView>

</LinearLayout>